--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,10 @@
-package: mytoken/go
+package: github.com/mytokenio/go
 import:
+- package: github.com/BurntSushi/toml
 - package: github.com/json-iterator/go
-  version: ^1.1.5
 - package: github.com/rs/xid
-  version: ^1.2.0
 - package: github.com/sirupsen/logrus
+- package: google.golang.org/grpc
+  subpackages:
+  - metadata
+- package: gopkg.in/yaml.v2
