--- a/glide.yaml
+++ b/glide.yaml
@@ -1,10 +1,16 @@
 package: github.com/mytokenio/go
 import:
 - package: github.com/BurntSushi/toml
+  version: ^0.3.0
 - package: github.com/json-iterator/go
+  version: ^1.1.5
 - package: github.com/rs/xid
+  version: ^1.2.1
 - package: github.com/sirupsen/logrus
+  version: ^1.0.6
 - package: google.golang.org/grpc
+  version: ^1.15.0
   subpackages:
   - metadata
 - package: gopkg.in/yaml.v2
+  version: ^2.2.1
