--- a/glide.yaml
+++ b/glide.yaml
@@ -1,16 +1,36 @@
-package: github.com/mytokenio/go
+package: .
 import:
 - package: github.com/BurntSushi/toml
-  version: ^0.3.0
+  version: ^0.3.1
+- package: github.com/Shopify/sarama
+  version: ^1.19.0
 - package: github.com/json-iterator/go
   version: ^1.1.5
+- package: github.com/lestrrat-go/file-rotatelogs
+  version: ^2.2.0
 - package: github.com/rs/xid
   version: ^1.2.1
 - package: github.com/sirupsen/logrus
-  version: ^1.0.6
+  version: ^1.2.0
 - package: google.golang.org/grpc
-  version: ^1.15.0
+  repo: https://github.com/grpc/grpc-go
+  vcs: git
   subpackages:
   - metadata
 - package: gopkg.in/yaml.v2
-  version: ^2.2.1
+  version: ^2.2.2
+- package: golang.org/x/crypto
+  repo: https://github.com/golang/crypto
+  vcs: git
+  subpackages:
+  - ssh/terminal
+- package: golang.org/x/sys
+  repo: https://github.com/golang/sys
+  vcs: git
+  subpackages:
+  - unix
+- package: golang.org/x/sys
+  repo: https://github.com/golang/sys
+  vcs: git
+  subpackages:
+  - windows
