--- a/glide.yaml
+++ b/glide.yaml
@@ -3,7 +3,7 @@ import:
 - package: github.com/BurntSushi/toml
   version: ^0.3.1
 - package: github.com/Shopify/sarama
-  version: ^1.19.0
+  version: ^1.18.0
 - package: github.com/json-iterator/go
   version: ^1.1.5
 - package: github.com/lestrrat-go/file-rotatelogs
@@ -34,3 +34,8 @@ import:
   vcs: git
   subpackages:
   - windows
+- package: google.golang.org/appengine
+  repo: https://github.com/golang/appengine
+  vcs: git
+  subpackages:
+  - cloudsql
